--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,11 @@ dependencies:
     sdk: flutter
   flutter_rating_bar: ^3.0.1+1
   cloud_firestore: ^0.13.0+1
-
+  image_picker:
+  google_sign_in: ^4.5.1
+  firebase_auth: ^0.16.1
+  mask_text_input_formatter: ^1.0.7
+  firebase_dynamic_links: ^0.5.3
 
 
   # The following adds the Cupertino Icons font to your application.
